# fluxscript

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .spiceinit  CMakeLists.txt  CMakeLists.txt.part1  Dockerfile.dev  LICENSE  LINGUIST_PR.md  Makefile  README.md  benchmark_results.csv  benchmark_results.json  features_to_implement.todo  flux_icons.qrc  nn  test_adevice_netlist.cpp  test_subckt_body.flux.cir  test_waveform
.github/workflows/: build-fluxscript.yml  ci.yml  lint.yml  test.yml  tidy.yml
.qwen/: settings.json
build_local/: CMakeCache.txt  Makefile  cmake_install.cmake  flux  flux-doc  flux-doctor  flux-fft  flux-format  flux-instrument  flux-lsp  flux-monte-carlo  flux-optimize  flux-pkg  flux-repl  flux-run  flux-spice  flux-stability  flux-sweep  flux-test  flux-worstcase  fluxc
cli/: docs_embedded.cpp  examples_embedded.cpp  flux-doc.cpp  flux-format.cpp  flux-instrument.cpp  flux-lsp.cpp  flux-monte-carlo.cpp  flux-optimize.cpp  flux-pkg.cpp  flux-spice.cpp  flux-stability.cpp  flux-test.cpp  flux-worstcase.cpp  fluxc.cpp  minimal.cpp  repl.cpp
docs/: FLUXSCRIPT.md
examples/: math_utils.flux  strings.flux
examples/fluxqt/: .gitignore  CMakeLists.txt  bridge.cpp  bridge.h  browser.flux  charts.flux  class_demo.flux  code_editor.flux  creative_suite.flux  dashboard.flux  demo.flux  desktop.flux  dialogs_demo.flux  dock_demo.flux  drop_demo.flux  gallery.flux  infra_demo.flux  main.cpp  modern_dashboard.flux  placeholder.flux  plot_demo.flux  ray_viewer.flux  scene_render.flux  showcase.flux  showcase_fixes.flux  smart_panel.flux  test_gui.flux  test_simple.flux  test_trivial.flux  trait_demo.flux  tree_demo.flux  widget_gallery.flux
examples/fullcircuit/: README.md  acswp.flux  analysis.flux  circuit.flux  dcsolve.flux  examples.flux  mna.flux  netlist.flux  test_mna_api.flux  trsim.flux
examples/json_explorer/: README.md  json_explorer.flux  json_types.flux  run.flux
examples/math/: math_utils.flux  strings.flux
examples/mna/: mna.flux
examples/spice/: netlist_parser.flux  voltage_divider.cir
extensions/flux-lsp-vscode/: .vscodeignore  extension.js  language-configuration.json  package-lock.json  package.json
gui-simple/: CMakeLists.txt  main.cpp
include/flux/: docs_embedded.h  examples_embedded.h  flux_ai_coprocessor.h  flux_completer.h  flux_debugger_panel.h  flux_editor.h  flux_editor_performance.h  flux_editor_tests.h  flux_editor_ui_polish.h  flux_eigen.h  flux_highlighter.h  flux_simulation_panel.h  flux_viospice_compat.h  interpreter.h  jit_engine.h  marshaller.h
plugins/: example_plugin.cpp
src/: bindings.cpp  flux_ai_coprocessor.cpp  flux_debugger_panel.cpp  flux_editor_performance.cpp  flux_editor_ui_polish.cpp  flux_simulation_panel.cpp  flux_viospice_compat.cpp  jit_engine.cpp  marshaller.cpp  phase3_stubs.cpp  phase4a_stubs.cpp
src/ai/: surrogate.cpp
src/analysis/: advanced_analysis.cpp  component_substitution.cpp  fft_engine.cpp
src/cli/: flux-doctor.cpp  flux-sweep.cpp  flux_fft.cpp  flux_run.cpp
src/compiler/: adevice_codegen.cpp  advanced_features.cpp  ast_stubs.cpp  codegen.cpp  codegen_new.cpp  compiler_instance.cpp  component_modeling_codegen.cpp  component_modeling_parser.cpp  control_flow_codegen.cpp  control_flow_parser.cpp  extended_codegen.cpp  extended_parser.cpp  import_parser.cpp  lexer.cpp  lifetime_inference.cpp  liveness_analysis.cpp  mixed_signal_codegen.cpp  model_quality_codegen.cpp  model_quality_parser.cpp  module_loader.cpp  netlist_generator.cpp  new_features_codegen.cpp  parallel_codegen.cpp  parallel_parser.cpp  parser.cpp  preprocessor.cpp  schematic_codegen.cpp  schematic_parser.cpp  spice_parser.cpp  symbolic_codegen.cpp  symbolic_parser.cpp  time_domain_codegen.cpp  time_domain_parser.cpp
src/doctor/: circuit_doctor.cpp
src/fluxc/: codegen.flux  parser.flux
src/gui/: plot.cpp
src/instruments/: instrument.cpp
src/jit/: flux_jit.cpp  jit_manager.cpp  scaling_security.cpp  simulation_hook.cpp  smart_signal.cpp  zero_copy_data.cpp
src/mlir/: flux_mlir.cpp  flux_mlir_stub.cpp
src/modules/: module_loader.cpp.bak
src/package/: dependency_resolver.cpp  http_client.cpp  package_manager.cpp  toml_parser.cpp
src/runtime/: advanced_math.cpp  advanced_runtime.cpp  autodiff.cpp  flux_llvm_bridge.cpp  flux_model_bridge.cpp  flux_runtime.cpp  mixed_signal_runtime.cpp  model_quality_engine.cpp  ngspice_bridge.cpp  parallel_runtime.cpp  runtime_stubs.cpp  script_interpreter.cpp  spice_runtime.cpp  symbolic_engine.cpp  time_domain_api.cpp  units.cpp
src/security/: security.cpp
src/simulation/: monte_carlo.cpp
src/sweep/: parametric_sweep.cpp
src/testing/: circuit_fuzz.cpp
src/toolbox/: control.cpp  power.cpp
src/tooling/: auto_docs.cpp  benchmark.cpp  circuit_diff.cpp  doc_generator.cpp  example_gallery.cpp  lsp_server.cpp  notebook_kernel.cpp  package_manager.cpp  package_tooling.cpp  profiler.cpp  repl.cpp  repl_impl.cpp  source_docs.cpp  (+1 more)
stdlib/: array.flux  cmatrix.flux  math.flux  signal.flux  stats.flux  string.flux  trig.flux
tests/: CMakeLists.txt  benchmark_fluxscript_jit.cpp  benchmark_python.py  benchmark_suite.cpp  filter.s2p  repro_issue.cpp  run_flux_tests.sh  test_advanced_analysis.cpp  test_advanced_analysis_full.cpp  test_advanced_math.cpp  test_all_features.flux  test_auto_docs.cpp  test_behavioral_sources.cpp  test_circuit_diff.cpp  test_circuit_doctor.cpp  test_circuit_fuzz.cpp  test_features_4_5.cpp  test_features_phase2.cpp  test_features_phase3.cpp  test_features_phase4a.cpp  test_instruments.cpp  test_module_system.cpp  test_ngspice.cpp  test_phase2_behavioral_modeling.cpp  test_phase5.cpp  test_phase7_1_model_quality.cpp  test_phase7_4_part2.cpp  test_phase7_4_tooling.cpp  test_runtime_autodiff.cpp  test_runtime_mixed_signal.cpp  test_runtime_parallel.cpp  test_runtime_symbolic.cpp  test_runtime_units.cpp  test_spice_bridge.cpp  test_time_domain_ngspice.cir  test_waveform_extraction.cpp  user_converter_v3.cir  user_converter_v3.raw
tools/: aot_wrapper.cpp  compile_shared.sh  compile_standalone.sh  mega_stress_gen.py
(+577 files in other folders)
